fix(content): Content height was too big

--- a/src/routes/Discover/styles.less
+++ b/src/routes/Discover/styles.less
@@ -22,7 +22,7 @@
 
     .discover-content {
         width: 100%;
-        height: calc(100% + var(--bottom-overlay-size));
+        height: 100%;
         margin-bottom: calc(var(--bottom-overlay-size) * -1);
         display: flex;
         flex-direction: row;
